--- a/server/package.json
+++ b/server/package.json
@@ -23,9 +23,12 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mongoose": "^9.2.2",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.3.11",
     "@nestjs/websockets": "^9.3.11",
+    "express": "^4.18.2",
+    "mongoose": "^7.1.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
