--- a/web-diary3d-client/package.json
+++ b/web-diary3d-client/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@types/three": "^0.131.1",
     "dotenv-webpack": "^8.0.1",
+    "fabric": "^5.3.0",
     "socket.io-client": "^4.6.1",
     "three": "^0.132.2"
   }
